4.28: 10/XX/2011 (svn rYYYY)
	* CORE: Added support for the countOf(PreparedQuery) in the Dao and the QueryBuilder.setCountOf(true).  Thanks to Pedro Velasco.

4.27: 10/11/2011 (svn r2019)
	* CORE: Added @DatabaseField(foreignAutoCreate=true) for auto-creating foreign fields with blank IDs using the internal DAO.
	* CORE: Added support for storing BigDecimal and BigInteger fields.  Thanks to Pedro Velasco.  Resolves feature #3414432.
	* CORE: Added support for the javax.persistence.Enumerated annotation for setting @Enumerated(ORDINAL) or @Enumerated(STRING).
	* CORE: Fixed problem with the columnDefinition field handling in @DatabaseFieldOther.  Thanks to Flo.  Fixes bug #3419779.
	* CORE: Removed the restriction on classes with just the ID.  Update now just returns 0.
	* ANDROID: Better handling of errors during java auto-detection around the new table configuration code.  Thanks to Ming Lin.

4.26: 9/26/2011 (svn r1978)
	* CORE: Added the first take on a object cache.  Thanks to the dev list for suggestions.
	* CORE: Improved the javax.persistence annotation handling to support @JoinColumn(name="xxx").  Thanks to Andrew Sleeman.
	* CORE: Added a RuntimeExceptionDao for wrapping Dao operations in RuntimeExceptions.  Thanks to the Android list.
	* CORE: Added a Dao.deleteById() method for removing an instance if you just have the id.
	* CORE: Added @DatabaseField(columnDefiniton = "...") for hand-defining the field SQL.
	* CORE: Removed the deprecated RawResults class that was replaced in 4.10.
	* CORE: Fixed problem with self-generated id fields not being marked as primary.  Thanks to Craig Andrews.  Fixes bug #3406600.
	* CORE: Fixed a problem where default was canBeNull=false with javax persistence macros.  Thanks to A.  Fixes bug #3410640.
	* CORE: Removed the maxForeignLevel() field from @DatabaseField which was deprecated in 4.22.
	* CORE: Added table and field configuration file reading and writing.